--- a/ChatBotWeb/Pages/FetchData.razor
+++ b/ChatBotWeb/Pages/FetchData.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Weather forecast</PageTitle>
 
-@using ChatBot.Data
+@using ChatBotWeb.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
