--- a/ChatBotWeb/Pages/_Host.cshtml
+++ b/ChatBotWeb/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace ChatBot.Pages
+@namespace ChatBotWeb.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
