--- a/ChatBotWeb/Shared/MainLayout.razor
+++ b/ChatBotWeb/Shared/MainLayout.razor
@@ -1,6 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>ChatBot</PageTitle>
+<PageTitle>ChatBotWeb</PageTitle>
+
+<RadzenDialog />
+<RadzenNotification />
+<RadzenContextMenu />
+<RadzenTooltip />
 
 <div class="page">
     <div class="sidebar">
