--- a/ChatBotWeb/_Imports.razor
+++ b/ChatBotWeb/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ChatBot
-@using ChatBot.Shared
+@using ChatBotWeb
+@using ChatBotWeb.Shared
+@using Radzen
+@using Radzen.Blazor
